--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
   <title>NOT WORLD MUSIC: A Global Album Discovery Platform</title>
 
@@ -166,7 +167,11 @@
 
       .album-info {      
         font-size: 3rem;
-       }
+      }
+
+      .interface-wrapper {
+        padding: 2rem;
+      }
     }
   </style>
 </head>
