--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
 
       .interface-wrapper {
         padding: 2rem;
+        padding-top: 4rem;
+        padding-bottom: 3rem;
       }
     }
   </style>
