providing fallback fonts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <style type="text/css">
     @font-face {
       font-family: 'Authentic Sans 90';
-      src: './data/fonts/woff/AUTHENTICSans-90.woff2';
+      src:  url('./data/fonts/woff/AUTHENTICSans-90.woff2') format('woff2'),
+            url('./data/fonts/woff/AUTHENTICSans-90.woff') format('woff'),
+            url('./data/fonts/otf/AUTHENTICSans-90.otf') format('opentype');
     }
 
     * {
