--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
+<html lang="en" translate="no">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NOT WORLD MUSIC: A Global Album Discovery Platform</title>
 
   <script src="./data/handlebars.min.js"></script>
@@ -333,7 +337,7 @@
 
       // Add camera controls
       const oControls = new THREE.OrbitControls(camera, renderer.domElement);
-      oControls.minDistance = 135;
+      oControls.minDistance = 130;
       oControls.maxDistance = 300;
       oControls.rotateSpeed = .25;
       oControls.zoomSpeed = .4;
@@ -363,7 +367,9 @@
 
           // Make albums appear when within center of screen
           maxHeight = .25;
+          console.log(zoomLevel);
           falloff = 1.0025; //closer to one means more albums are visible
+
           album.alt = maxHeight * (Math.pow(falloff, -distance * distance)) - .1;
           // album.alt += maxHeight / 6 * (Math.pow(falloff * 1.1, -distance * distance)); //add extra height for center album
 
@@ -453,20 +459,42 @@
       });
 
       // Implementing oncustomobject click functionality from globe.gl manually
-      function onPointerMove(event) {
+
+      let x = 0;
+      let y = 0;
+
+      function getPointerpos(e) {
         // calculate pointer position in normalized device coordinates, (-1 to +1) for both components
-        pointer.x = (event.clientX / window.innerWidth) * 2 - 1;
-        pointer.y = - (event.clientY / window.innerHeight) * 2 + 1;
+        if (e.type == 'touchstart' || e.type == 'touchmove' || e.type == 'touchend' || e.type == 'touchcancel') {
+          var touch = e.originalEvent.touches[0] || e.originalEvent.changedTouches[0];
+          x = touch.pageX;
+          y = touch.pageY;
+        } else if (e.type == 'mousedown' || e.type == 'mouseup' || e.type == 'mousemove' || e.type == 'mouseover' || e.type == 'mouseout' || e.type == 'mouseenter' || e.type == 'mouseleave') {
+          x = e.clientX;
+          y = e.clientY;
+        }
+        pointer.x = (x / window.innerWidth) * 2 - 1;
+        pointer.y = - (y / window.innerHeight) * 2 + 1;
       }
-      window.addEventListener('pointermove', onPointerMove);
+
       let pointerPos = {};
       let pointerPosNew = {};
-      window.addEventListener('mousedown', () => {
+
+      window.addEventListener('mousedown', (e) => { getStartPos(e); })
+      window.addEventListener('touchstart', (e) => { getStartPos(e); })
+
+      function getStartPos(e) {
+        getPointerpos(e);
         // get mouse position on mousedown
         pointerPos.x = pointer.x;
         pointerPos.y = pointer.y;
-      })
-      window.addEventListener('mouseup', () => {
+      }
+
+      window.addEventListener('mouseup', (e) => { getEndPosOpenAlbum(e); });
+      window.addEventListener('touchend', (e) => { getEndPosOpenAlbum(e); });
+
+      function getEndPosOpenAlbum(e) {
+        getPointerpos(e);
         // get mouse position on mouseup
         pointerPosNew.x = pointer.x;
         pointerPosNew.y = pointer.y;
@@ -477,20 +505,19 @@
         if (Math.abs(diffX) > 0.01 || Math.abs(diffY) > 0.01) {
           // if so, this is a drag, so we don't want to do anything
           return;
-        }       
-        
+        }
+
+        // else, this is a click, so we want to check if we clicked on a custom object
         var raycaster = new THREE.Raycaster();
         raycaster.setFromCamera(pointer, camera);
         var intersects = raycaster.intersectObjects(scene.children[0].children[0].children[12].children, true); //array
         // console.log(scene.children[0].children[0].children[12].children);
+        // get the first object that was clicked on and open the info
         if (intersects.length > 0) {
           var clickedAlbum = intersects[0].object.__data;
-          console.log("clicked on ", clickedAlbum.name);
-          openInfo(clickedAlbum, true);
         }
-
+        openInfo(clickedAlbum, true);
       }
-      );
 
       // Open Overlay with album info
       function openInfo(album, clicked) {
