--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" translate="no">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NOT WORLD MUSIC: A Global Album Discovery Platform</title>
+  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+
 
   <script src="./data/handlebars.min.js"></script>
   <script src="./data/jquery-1.10.1.min.js"></script>
@@ -172,13 +175,27 @@
       }
 
       .album-info {      
-        font-size: 3rem;
+        font-size: 1.5rem;
+      }
+
+      .bottom-text {
+        font-size: 2rem;
       }
 
       .interface-wrapper {
         padding: 2rem;
         padding-top: 4rem;
         padding-bottom: 3rem;
+      }
+
+      .clickable {
+        text-decoration-thickness: 0.18rem;
+      }
+    }
+
+    @media only screen and (max-device-width: 1024px) {
+      .interface-wrapper {
+        padding-bottom: 6rem;
       }
     }
   </style>
@@ -367,9 +384,7 @@
 
           // Make albums appear when within center of screen
           maxHeight = .25;
-          console.log(zoomLevel);
           falloff = 1.0025; //closer to one means more albums are visible
-
           album.alt = maxHeight * (Math.pow(falloff, -distance * distance)) - .1;
           // album.alt += maxHeight / 6 * (Math.pow(falloff * 1.1, -distance * distance)); //add extra height for center album
 
@@ -423,6 +438,11 @@
           closeInfo();
         }
       });
+      document.querySelector('canvas').addEventListener('touchend', function (e) {
+        if (e.target == e.currentTarget) {
+          closeInfo();
+        }
+      });
 
       // Play Button
       document.querySelector('.play-button').addEventListener('click', function () {
@@ -459,10 +479,6 @@
       });
 
       // Implementing oncustomobject click functionality from globe.gl manually
-
-      let x = 0;
-      let y = 0;
-
       function getPointerpos(e) {
         // calculate pointer position in normalized device coordinates, (-1 to +1) for both components
         if (e.type == 'touchstart' || e.type == 'touchmove' || e.type == 'touchend' || e.type == 'touchcancel') {
@@ -475,6 +491,8 @@
         }
         pointer.x = (x / window.innerWidth) * 2 - 1;
         pointer.y = - (y / window.innerHeight) * 2 + 1;
+
+        console.log(pointer.x, pointer.y);
       }
 
       let pointerPos = {};
@@ -510,13 +528,14 @@
         // else, this is a click, so we want to check if we clicked on a custom object
         var raycaster = new THREE.Raycaster();
         raycaster.setFromCamera(pointer, camera);
+        console.log(pointer);
         var intersects = raycaster.intersectObjects(scene.children[0].children[0].children[12].children, true); //array
         // console.log(scene.children[0].children[0].children[12].children);
         // get the first object that was clicked on and open the info
         if (intersects.length > 0) {
           var clickedAlbum = intersects[0].object.__data;
+          openInfo(clickedAlbum, true);
         }
-        openInfo(clickedAlbum, true);
       }
 
       // Open Overlay with album info
