disable reload on resize

--- a/index.html
+++ b/index.html
@@ -585,9 +585,10 @@
   })();
 
   // Reload page when window is resized
-  window.addEventListener('resize', function () {
-    window.location.reload();
-  });
+  // Disabled as it was most likely the cause for the site not to work on some phones
+  // window.addEventListener('resize', function () {
+  //   window.location.reload();
+  // });
 
 
 
