--- a/index.html
+++ b/index.html
@@ -236,6 +236,11 @@
         text-decoration-thickness: 0.17rem !important;
       }
 
+      .about-page {
+        overflow: scroll;
+        -webkit-overflow-scrolling: touch;
+      }
+
       .about-text {
         font-size: 1.2rem;
         padding: 1rem;
@@ -263,9 +268,6 @@
         padding-bottom: 6rem;
       }
     }
-
-    
- 
   </style>
 </head>
 
