trying to make text readable on mobile

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
       text-underline-offset: 0.2rem;
       text-decoration-thickness: 0.25rem !important;
       pointer-events: auto;
+      user-select: none;
     }
 
     .about-page {
@@ -242,8 +243,8 @@
       }
 
       .about-text {
-        font-size: 1.2rem;
-        padding: 1rem;
+        font-size: 1.1rem;
+        padding: 1.5rem;
         max-width: 100%;
       }
 
