change font size on about page

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       }
 
       .about-text {
-        font-size: 1.1rem;
+        font-size: .9rem;
         padding: 1.5rem;
         max-width: 100%;
       }
